# Enviroflow-Repository

./: .dockerignore  .firebaserc  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  Dockerfile  QWEN.md  README.md  cleanup_repo_size.sh  create_fresh_repo.sh  inspect_pnl_tables.py  mise.toml  pyproject.toml
.cursor/rules/: code-quality.mdc  linting-and-tools.mdc  project-structure.mdc
.github/: copilot-instructions.md
.github/workflows/: actions.yml.disabled  cli_pipeline.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.streamlit/: config.toml
docs/: Data_Pipeline_Overview_for_Management.md  Repository_Size_Reduction_Guide.md
docs/Current Push/: sql querries to add.md
docs/dev_notes/: 00_Project_Overview.md  01_Architecture_And_Data_Flow.md  02_Pipeline_Specification.md  03_Development_Patterns.md  04_CLI_Reference.md  05_Xero_Integration_Flask_App.md  06_Code_Cleanup_Summary.md  07_Session_Summary_Aug26_2025.md  08_Session_Summary_Sep16_2025.md  09_Labour_Deduplication_Sep16_2025.md  Deployment_Performance.md  Pre-commit_Hooks_Guide.md  Repository_Cleanup_Summary.md  github_actions_local_testing.md  github_actions_scheduling.md  xero_sdk_usage_notes.md
docs/dev_plan/: 00_Start_Here.md  00_WIP_ONBOARDING.md  01_Tasks_And_Roadmap.md  03_Migration_Plan.md  04_Next_Action_Plan.md
docs/history/: 2025-08-13_GSheets_Framework_Development_Summary.md  2025-08-26_Pipeline_Optimization_And_Testing_Session.md  2025-08-26_xero_sdk_upgrade.md  Google_Sheets_Framework_Technical_Summary.md  Project_Development_History.md
enviroflow_app/: __init__.py  add_hours.py  config.py  🏠_Home.py
enviroflow_app/cli/: __init__.py  config.py  main.py  main_typer_broken.py
enviroflow_app/db_queries/: approved_jobs_list.sql  declined_jobs_list.sql  (+12 more)
scripts/: init_cost_buildup_db.py
tests/: README_SQL_Query_Explorer.md  test_gsheets_client.py  test_pnl_parsers.py  test_sales_extraction.py  test_xero_costs_extraction.py  trello_extraction_tests.py
xero/: .gitignore  README.md  app.py  xero_quotes.py
(+126 files in other folders)
